--- a/templates/common/base.html
+++ b/templates/common/base.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Bootstrap 101 Template</title>
-        <link href="css/bootstrap.min.css" rel="stylesheet">
+        <link href="/static/common/utils/external/bootstrap-3.3.6-dist/css/bootstrap.min.css" rel="stylesheet">
     </head>
 </header>
 
@@ -56,7 +56,7 @@
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="js/bootstrap.min.js"></script>
+<script src="/static/common/utils/external/bootstrap-3.3.6-dist/js/bootstrap.min.js"></script>
 
 </body>
 </html>
