--- a/templates/home.html
+++ b/templates/home.html
@@ -1,1 +1,34 @@
-{% extends "common/base.html" %}
+{% load staticfiles %}
+
+<html>
+
+
+<header>
+    <div class="row">
+        {% include "common/base.html" %}
+    </div>
+</header>
+
+
+<body>
+
+<div class="container">
+
+    <div class="row">
+
+        Aptitude
+
+
+    </div>
+
+    <div class="row">
+
+        Other Services
+    </div>
+
+
+</div>
+
+
+</body>
+</html>
