--- a/templates/common/base.html
+++ b/templates/common/base.html
@@ -1,19 +1,13 @@
 {% load staticfiles %}
 
-<html>
 
-<header>
-    <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Bootstrap 101 Template</title>
         <link href="/static/common/utils/external/bootstrap-3.3.6-dist/css/bootstrap.min.css" rel="stylesheet">
-    </head>
-</header>
 
-<body>
 
+<div style="height: 10% !important;">
 <div class="navbar navbar-default navbar-fixed-top" role="navigation">
 
     <div class="container">
@@ -25,16 +19,17 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#"> Test</a>
+            <a class="navbar-brand" href="#">Home</a>
 
 
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
                 <li class="active">
-                    <a href="#">Home</a>
+                    <a href="#">Test</a>
                 </li>
-                <li> <a href="#">About</a></li>
+                <li> <a href="#">About Us</a></li>
+                <li> <a href="#">Contact</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Themes<b class="caret"></b></a>
                     <ul class="dropdown-menu">
@@ -59,6 +54,5 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="/static/common/utils/external/bootstrap-3.3.6-dist/js/bootstrap.min.js"></script>
+    </div>
 
-</body>
-</html>
